---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "const N := 1\nvar _ : string(N)\n"
---
"N"@(FileId(1), 6..7) [ConstVar(Const, No)]: int
"_"@(FileId(1), 17..18) [ConstVar(Var, No)]: string_n Fixed(Unevaluated(LibraryId(0), BodyId(1)))
"<root>"@(dummy) [Module(No)]: <error>

